Clase 4 consumo de una api con services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
 </mat-grid-list>
 
 <ul>
-  <li *ngFor="let variable of variables">{{variable.nombre}}</li>
+  <li *ngFor="let variable of valores">{{variable.name}}</li>
 </ul>
         
     <app-body></app-body>
