--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,21 @@
       <app-footer></app-footer>
     </mat-grid-tile-footer>
 
-    
+    <div style="text-align: center;">
+      <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
+
+        <label for="name">Name</label>
+        <input id="name" type="text" formControlName="name">
+        
+        <label for="url">URL</label>
+        <input id="url" type="text" formControlName="url">
+
+        <label for="email">Email</label>
+        <input id="email" type="text" formControlName="email">
+        
+        <button mat-raised-button type="submit">Purchase</button>
+      </form>
+    </div>
 
   <router-outlet>
   <router-outlet /> 
