--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -151,6 +151,20 @@
   .social-links a:hover svg path {
     fill: var(--gray-900);
   }
+  .cargando {   
+    width: 100%;height: 100%;
+    overflow: hidden;
+    top: 0px;
+    left: 0px;
+    z-index: 10000;
+    text-align: center;
+    position:absolute;
+    background-color: #FFFFFF;
+    opacity:0.6;
+    filter:alpha(opacity=40);
+ 
+    }
+
 
   @media screen and (max-width: 650px) {
     .content {
@@ -164,4 +178,5 @@
       background: var(--red-to-pink-to-purple-horizontal-gradient);
       margin-block: 1.5rem;
     }
+    
   }
