clase 7 guardia, ngModel y build

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,6 +52,11 @@
       
       <button mat-raised-button type="submit">Purchase</button>
     </form>
+
+    
+    <input id="pokemon" type="text" [(ngModel)]="pokemon.name">
+    {{pokemon.name}}
+
   </div>
 </div>
   <router-outlet>
